--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@ input{
 }
 .search-box{
     border: 1px solid rgb(221, 213, 213);
+    background-color: #e9ecef;
 }
 .search-head{
     margin: 5px 0;
@@ -25,7 +26,7 @@ input{
 }
 .lead{
     font-family: 'Merriweather', serif;
-    color: rgb(122, 134, 144);
+    color:  rgb(98, 107, 116);
     margin: 0 40px;
 }
 .uvIndex{
@@ -37,9 +38,10 @@ input{
 }
 #cityWrap{
     margin-bottom: 0;
+    background-color: #cccfd3;
 }
 #cityName{
-    color:  rgb(154, 168, 180);
+    color:  rgb(98, 107, 116);
     margin-bottom: 15px;
 }
 #button-addon2:active{
@@ -57,8 +59,10 @@ input{
 }
 #list{
     cursor: pointer;
+    font-weight: 500;
     font-size: 1.5rem;
     position: relative;
+    background-color: #e9ecef;
 }
 #list:hover{
     background-color: whitesmoke;
@@ -72,6 +76,9 @@ input{
 }
 #clearBtn:hover{
     color: rgb(122, 119, 119);
+}
+#forecastWrap{
+    background-color:#b4bbc3;
 }
 @media screen and (min-width:486px){
     header{
